--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}/${DB_NAME:mydatabase}
-# ?useSSL=false
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}/${DB_NAME:mydatabase}?useSSL=false
+
 spring.datasource.username=${DB_USERNAME:soul}
 spring.datasource.password=${DB_PASSWORD:soul-redouane}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
