--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}/${DB_NAME:mydatabase}?useSSL=false
+# spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}/${DB_NAME:mydatabase}?useSSL=false
 
-spring.datasource.username=${DB_USERNAME:soul}
-spring.datasource.password=${DB_PASSWORD:soul-redouane}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+# spring.datasource.username=${DB_USERNAME:soul}
+# spring.datasource.password=${DB_PASSWORD:soul-redouane}
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=create
 
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
+
+# DataSource Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# H2 Console Configuration (optional)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
